--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@tailwindcss/vite": "^4.0.7",
     "@toolpad/core": "^0.12.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
@@ -23,7 +24,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "shadcn-ui": "^0.9.4",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
